Use manifest version 3 for Chrome, version 2 for Firefox

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,9 @@ clean:
 	rm -f $(TARGETS)
 
 $(NAME)-firefox.xpi: $(SRC)
+	sed -i 's/\("manifest_version": \).*/\12,/' manifest.json
 	zip -r $@ $^
+	sed -i 's/\("manifest_version": \).*/\13,/' manifest.json
 
 $(NAME)-chrome.zip: $(SRC)
 	zip -r $@ $^
