--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "No Fucking Thanks",
+  "name": "No Fucking Thanks — n‌ft blocker",
   "description": "Expose N‌FTs for what they are: shitty JPEGs",
   "version": "1.1",
 
